test/files/neg/byname-implicits-11.check
byname-implicits-11.scala:8: error: diverging implicit expansion for type Foo[Int]
starting with method foo in object Foo
  implicitly[Foo[Int]]
            ^
1 error
